# Reference-Checker-API

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run_api.py
benchmark_outputs/: benchmark_detailed.csv  benchmark_summary.csv  benchmark_summary.json
benchmark_outputs/file (2)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs/file (3)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs/file (4)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs/file (5)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs/file (6)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs_v5/: benchmark_detailed.csv  benchmark_duplicates.csv  benchmark_summary.csv  benchmark_summary.json
benchmark_outputs_v5/file (2)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs_v5/file (3)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs_v5/file (4)/: changes.json  corrected.bib  diff_report.html  report.csv
benchmark_outputs_v5/file (5)/: changes.json  corrected.bib  diff_report.html  report.csv
examples/: sample_input.bib
notebooks/: colab_benchmark.py  colab_bibverify.ipynb  colab_bibverify.py  colab_bibverify_demo.py  colab_upload_review.py
outputs/: report.csv
outputs_ui/: changes.json  corrected.bib  diff_report.html
src/bibverify/: __init__.py  (+8 more)
tests/: test_benchmark.py  test_document_ingestion.py  test_online_improvements.py  test_pipeline.py
tests_api/: test_api.py
(+22 files in other folders)
