[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bibverify"
version = "0.1.0"
description = "CPU-only BibTeX verification pipeline with optional HF LLM adjudication"
dependencies = [
  "bibtexparser==1.4.1",
  "rapidfuzz==3.9.6",
  "pandas==2.2.3",
  "requests==2.32.3",
  "unidecode==1.3.8",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9"
]

[project.scripts]
bibverify-api = "run_api:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
